--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
     "@next/font": "13.1.6",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
-    "next": "13.1.6",
+    "next": "^14.0.4",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "react-modal-video": "^2.0.0",
+    "resend": "^2.1.0",
     "swiper": "^11.0.5"
   },
   "devDependencies": {
